css-frameworks: limited min-width

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 				<div class="col-md-8 center-block text-center">
 					<h2>Want to work with us?</h2>
 					<p>Magnis modipsae que voloratati andigen daepeditem quiate re porem aut labor. Laceaque quiae sitiorem rest non restibusaes maio es dem tumquam.</p>
-					<a href="#" class="btn btn-large">Get in touch</a>
+					<a href="#modal" class="btn btn-large" role="button" data-toggle="modal">Get in touch</a>
 				</div>
 			  </div>
 			</div>
